--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,13 @@
       content="MERN Signup"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-
+    <!-- <script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script> -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/a1Z5J5ir5frI8tRM5PprCpdC5lpyO5KLf3kk6D"
+      crossorigin="anonymous"
+    /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
